# playground-6pnwam0r

./: .gitignore  README.md  techio.yml  topics.md
cmake-project/: common.sh
cmake-project/00_project_root/: CMakeLists.txt  check.sh
cmake-project/01_lib_x/scripts/: build
cmake-project/01_project_root/: check.sh
cmake-project/01_project_root/project/: CMakeLists.txt
cmake-project/01_project_root/stubs/: usage_check.cmake
cmake-project/02_interface_lib/: CMakeLists.txt  check.sh
cmake-project/02_interface_lib/stubs/: usage_check.cc  usage_check.cmake
cmake-project/02_interface_lib/time_travel_interface/: CMakeLists.txt
cmake-project/03_flux_cap_lib/: check.sh
cmake-project/03_flux_cap_lib/stubs/: CMakeLists.txt  usage_check.cc  usage_check.cmake
cmake-project/03_flux_cap_lib/stubs/flux_capacitor/: CMakeLists.txt
cmake-project/04_flux_cap_tests/: check.sh
cmake-project/04_flux_cap_tests/stubs/: CMakeLists.txt  usage_check.cmake
cmake-project/04_flux_cap_tests/stubs/flux_capacitor/: CMakeLists.txt
cmake-project/05_time_disp/: check.sh
cmake-project/05_time_disp/stubs/: CMakeLists.txt  usage_check.cmake
cmake-project/05_time_disp/stubs/time_display/: CMakeLists.txt
cmake-project/06_time_machine_exe/: check.sh
cmake-project/06_time_machine_exe/stubs/: CMakeLists.txt  usage_check.cmake
cmake-project/07_functions/: check.sh
cmake-project/07_functions/stubs/: CMakeLists.txt  project_helper.cmake
cmake-project/07_functions/stubs/flux_capacitor/: CMakeLists.txt
cmake-project/07_functions/stubs/time_display/: CMakeLists.txt
cmake-project/07_functions/stubs/time_machine/: CMakeLists.txt
cmake-project/07_functions/stubs/time_travel_interface/: CMakeLists.txt
cmake-project/project/: build.sh
cmake-project/project/cmake/: CMakeLists.txt
cmake-project/project/cmake/flux_capacitor/tests/: CMakeLists.txt
cmake-project/project/cmake/settings/: CMakeLists.txt
cmake-project/project/cmake/time_display/: CMakeLists.txt
cmake-project/project/cmake/time_display/tests/: CMakeLists.txt
cmake-project/project/cmake/time_machine/: CMakeLists.txt
cmake-project/project/cmake/time_machine/tests/: CMakeLists.txt
cmake-project/source/: CMakeLists.txt  build.sh
cmake-project/source/flux_capacitor/: CMakeLists.txt
cmake-project/source/flux_capacitor/include/flux_capacitor/: flux_capacitor.h
cmake-project/source/flux_capacitor/src/: flux.cc  flux_capacitor.cc
cmake-project/source/flux_capacitor/tests/: CMakeLists.txt  flux_capacitor.cc
cmake-project/source/time_display/: CMakeLists.txt
cmake-project/source/time_display/tests/: CMakeLists.txt  colors.cc  numbers.cc  time_display.cc
cmake-project/source/time_machine/: CMakeLists.txt
cmake-project/source/time_machine/tests/: CMakeLists.txt  time_machine.cc
cmake-project/source/time_travel_interface/: CMakeLists.txt
markdowns/: 00_project_root.md  01_project_root.md  02_interface_lib.md  02_solution.md  02_time_travel_iface_lib.md  03_flux_cap_lib.md  03_solution.md  04_flux_cap_tests.md  04_solution.md  05_solution.md  05_time_disp.md  06_solution.md  06_time_machine_exe.md  07_functions.md  07_solution.md  0x_functions.md  lib_x.md  resources.md  welcome.md  xx_end.md
project/source/settings/: CMakeLists.txt
(+31 files in other folders)
